--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -3,14 +3,14 @@
     margin: 20px auto; 
     padding: 10px 20px; 
     font-size: 16px; 
+    background-color: rgba(0, 0, 0, 0.752);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     color: white; 
-    background-color: #00BFFF; 
-    border: none; 
-    border-radius: 5px; 
+    border-radius: 4px; 
     cursor: pointer; 
     transition: background-color 0.3s;
   }
   
   .button:hover {
-    background-color: #008CBA;
+    background-color: #01090b3a;
   }
