--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,37 +1,50 @@
 .header {
-    margin-bottom: 15px;
+    width: 100%;
+    height: 60px; 
+    margin: 0;
+    padding: 0; 
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: teal;
+    background-color: rgba(0, 0, 0, 0.752);
+    position: fixed;
+    top: 0;
+    left: 0; 
+    z-index: 1000;
   }
   
   .form {
-    padding: 15px;
+    position: relative;
+  }
+  
+  .inputContainer {
+    position: relative;
     display: flex;
-    gap: 5px;
   }
   
   .input {
-    padding: 10px;
-    font-size: 15px;
-    border-radius: 5px;
-    border: none;
-    outline: none;
+    background-color: transparent; 
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  color: white; 
+  padding-left: 40px; 
+  width: 360px;
+  text-align: center;
+  height: 40px; 
+  font-size: 16px;
+  outline: none; 
+  border-radius: 4px; 
   }
   
   .btn {
-    background-color: white;
-    font-size: 15px;
-    border-radius: 5px;
-    border: none;
-    outline: none;
-    color: rgb(3, 84, 84);
-    font-weight: 500;
-    padding: 10px;
+    position: absolute; 
+    left: 10px;
+    top: 50%; 
+    transform: translateY(-50%); 
+    height: 40px;
+    font-size: 16px; 
+    background-color: transparent; 
+    color: white; 
+    border: none; 
+    border-radius: 4px; 
     cursor: pointer;
-    &:hover {
-      color: white;
-      background-color: rgb(3, 84, 84);
-    }
   }
